--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ astroid==2.5.1
 Babel==2.8.1
 Beaker==1.10.0
 beautifulsoup4==4.9.3
-blivet==3.3.0
-blivet-gui==2.2.1
+# blivet==3.3.0
+# blivet-gui==2.2.1
 Brlapi==0.8.0
 cffi==1.14.1
 chardet==3.0.4
